@@ -1,7 +1,7 @@
 /***************************************************************************
  *              GModel.i - Abstract virtual model base class               *
  * ----------------------------------------------------------------------- *
- *  copyright (C) 2009-2018 by Juergen Knoedlseder                         *
+ *  copyright (C) 2009-2019 by Juergen Knoedlseder                         *
  * ----------------------------------------------------------------------- *
  *                                                                         *
  *  This program is free software: you can redistribute it and/or modify   *
@@ -60,17 +60,19 @@ public:
 
     // Implemented methods
     int                 size(void) const;
+    int                 scales(void) const;
     bool                has_par(const std::string& name) const;
     bool                has_scales(void) const;
     const std::string&  name(void) const;
     void                name(const std::string& name);
-    std::string         instruments(void) const;
-    void                instruments(const std::string& instruments);
     const double&       ts(void) const;
     void                ts(const double& ts);
     const bool&         tscalc(void) const;
     void                tscalc(const bool& tscalc);
     const bool&         has_ts(void) const;
+    std::string         instruments(void) const;
+    void                instruments(const std::string& instruments);
+    GModelPar&          scale(const int& index);
     GModelPar           scale(const std::string& instrument) const;
     void                scale(const GModelPar& par);
     std::string         ids(void) const;
