@@ -1,8 +1,9 @@
-2019-04-26
+2019-05-22
 
         * Version 1.6.0 released
         ========================
 
+        Allow fitting of instrument scale factors (#2892)
         Add GCTAModelSpatialLookup class to handle CTA background lookups (#2878)
         Implement energy-dependent Gaussian CTA spatial background model (#2868)
         Take instrument scale factors in On/Off analysis into account (#2867)
